<resources>
    <string name="app_name">App Senati ETI </string>
    <string name="action_settings">Settings</string>

    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_ingresar">Ingresar</string>

    <string name="title_activity_act_login">Acceder al sistema</string>
    <string name="logo_senati">Logo Senati</string>
    <string name="login_contraseña">Ingresa tu usuario y contraseña</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contraseña">Contraseña</string>

    <string name="title_activity_act_registrar_instructor">Registrar Instructor</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_apellido_paterno">Apellido Paterno</string>
    <string name="hint_apellido_materno">Apellido Materno</string>
    <string name="hint_apellido_nombreP">Primer Nombre</string>
    <string name="hint_apellido_nombreS">Segundo Nombre</string>
    <string name="hint_telefonos">Teléfonos</string>
    <string name="hint_correo">Correo electrónico</string>

    <string name="title_activity_act_calendario">Elegir fecha de visita</string>
    <string name="lbl_Instructor">Instructor : </string>
    <string name="btn_SiguienteCalendario">Siguiente</string>

    <string name="lbl_FechaVisita">Fecha</string>
    <string name="title_activity_act_item_empresa">actItemEmpresa</string>

    <string name="title_activity_act_lista_empresas">Mis visitas</string>
    <string name="lbl_ItemEmpresa">Empresa</string>
    <string name="lbl_ItemAprendiz">Aprendiz</string>
    <string name="lbl_ItemHora">Hora</string>
    <string name="title_activity_act_registro_pea">actRegistroPea</string>

    <string name="desc_image">imagen</string>
    <string name="RegistrarPEA">Registrar PEA</string>
    <string name="SeleccionarPEA">Seleccionar PEA</string>
    <string name="PorcentajeCumplimiento">Porcentaje de cumplimiento</string>
    <string name="AgregarPorcCumplimien">Agregar</string>
    <string name="Continuar">New Button</string>
    <string name="title_activity_sct_gestion_pea">sctGestionPea</string>
    <string name="GestionPEA">Gestion PEA</string>
    <string name="Vsita">Mis Visitas</string>
    <string name="Visitas">Mis visitas</string>
    <string name="title_activity_act_realizar_visita">actRealizarVisita</string>
    <string name="RealizarVisita">Realizar Visita</string>
    <string name="title_activity_aspectos_monitor">AspectosMonitor</string>
    <string name="title_activity_act_registro_rotaciones">actRegistroRotaciones</string>
    <string name="RegistroRotaciones">Registro de Rotaciones</string>
    <string name="Puesto">Puesto</string>
    <string name="fDesde">Desde:</string>
    <string name="grabar">Grabar</string>

    <string name="title_activity_aspectos_aprendiz">aspectosAprendiz</string>
    <string name="title_activity_act_aspectos_apr">actAspectosApr</string>

</resources>
