<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="20dp"
android:paddingRight="20dp"
android:paddingTop="20dp"
android:paddingBottom="20dp" tools:context=".actLogin"
android:orientation="vertical"
android:gravity="center_horizontal"
android:id="@+id/layLogin"
android:weightSum="1">

<ImageView
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:id="@+id/imgLogo"
    android:src="@drawable/logo"
    android:padding="20dp"
    android:contentDescription="@string/logo_senati"
    android:layout_weight="0.14" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/login_contraseña"
    android:id="@+id/textView"
    android:layout_weight="0.15" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:id="@+id/txtUsuario"
    android:layout_gravity="center_horizontal"
    android:hint="@string/hint_usuario"
    android:padding="10dp"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:id="@+id/txtContraseña"
    android:layout_gravity="center_horizontal"
    android:hint="@string/hint_contraseña"
    android:padding="10dp"
    android:password="true" />

<LinearLayout
    android:id="@+id/llGC"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_ingresar"
         android:id="@+id/btnIngresar"
         android:layout_weight="1" />

     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_registrar"
         android:id="@+id/btnRegistrar"
         android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
