<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="20dp"
android:paddingRight="20dp"
android:paddingTop="20dp"
android:paddingBottom="20dp"
tools:context="senati.senatipeamobile.actItemEmpresa">

<ImageView
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="0dp"
    android:id="@+id/imgLogoEmpresa"
    android:contentDescription="@string/desc_image" />

<TextView
    android:layout_width="150sp"
    android:layout_height="30sp"
    android:layout_marginLeft="70sp"
    android:textStyle="bold"
    android:textSize="20sp"
    android:text="@string/lbl_ItemEmpresa"
    android:id="@+id/lblEmpresa" />

<TextView
    android:layout_width="120sp"
    android:layout_height="20sp"
    android:layout_marginLeft="70sp"
    android:layout_marginTop="30sp"
    android:textStyle="italic"
    android:textSize="15sp"
    android:text="@string/lbl_ItemAprendiz"
    android:id="@+id/lblAprendiz" />

<TextView
    android:layout_width="50sp"
    android:layout_height="20sp"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:text="@string/lbl_ItemHora"
    android:id="@+id/lblHora" />

<ImageButton
    android:layout_width="30sp"
    android:layout_height="30sp"
    android:layout_marginTop="20sp"
    android:layout_marginRight="20sp"
    android:layout_alignParentRight="true"
    android:id="@+id/imbMapa"
    android:contentDescription="@string/desc_image" />

</RelativeLayout>

