<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="senati.senatipeamobile.actRegistroRotaciones">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/RegistroRotaciones"
        android:id="@+id/textView17"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Puesto"
        android:id="@+id/textView18"
        android:layout_below="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_below="@+id/textView18"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fDesde"
        android:id="@+id/textView19"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_below="@+id/spinner3"
        android:layout_toEndOf="@+id/textView18" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/spinner3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_below="@+id/editText6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp"
        android:layout_alignEnd="@+id/editText6" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grabar"
        android:id="@+id/button8"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

</RelativeLayout>
